feat: pagination and sorting with a custom PageQuery